2007-11-12  Carlos Garnacho  <carlosg@gnome.org>

	* privileges-table.[ch], users-table.[ch], users-tool.c, table.h:
	prepare to clear some GUI before reloading the configuration.
	* callbacks.c: update config after any change to it, workarounds the
	problem caused by having IDs mismatch between the configuration stored
	locally and the one it's compared with when sent to s-t-b. Fixes
	#489187.

2007-09-14  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.20.0

2007-09-06  Carlos Garnacho  <carlosg@gnome.org>

	* users-tool.c (gst_users_tool_constructor): Added, get gconf values
	there, after tool->name has been set. Fixes #466183
	(on_showall_changed): actually get the GConfValue.

2007-09-03  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.19.92

2007-08-28  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.19.91

2007-07-28  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.19.1

2007-07-10  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.19.0

2007-06-18  Carlos Garnacho  <carlosg@gnome.org>

	* privileges-table.c: constify privilege descriptions array
	(privilege_search): use correct key for bsearch(), fix a compiler
	warning.

2007-04-09  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.18.1

2007-04-08  Carlos Garnacho  <carlosg@gnome.org>

	* group-members-table.c (user_name_cell_data_func): Added, cell data
	func to ensure that at least the login name will be shown if there's
	no full name. Fixes #425020.

2007-03-12  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.18.0

2007-02-27  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.17.92

2007-02-12  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.17.91

2007-02-11  Carlos Garnacho  <carlosg@gnome.org>

	* callbacks.c: mark a few dialogs as transient for another ones. Fixes
	#392720.

2007-01-09  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.17.5

2007-01-08  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.17.4

2006-12-01  Carlos Garnacho  <carlosg@gnome.org>

	* Release 2.17.3
