@@ -1,5 +1,10 @@
 2007-11-12  Carlos Garnacho  <carlosg@gnome.org>
 
+ 	* user-settings.c (set_main_group): make sure that the combobox
+ 	selection is resetted if the user has no main group.
+
+2007-11-12  Carlos Garnacho  <carlosg@gnome.org>
+
 	* privileges-table.[ch], users-table.[ch], users-tool.c, table.h:
 	prepare to clear some GUI before reloading the configuration.
 	* callbacks.c: update config after any change to it, workarounds the
